--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   --rating-color: hsla(44, 100%, 49%, 1);
   --surface: hsla(250, 13%, 11%, 1);
   --text-color: hsla(250, 2%, 59%, 1);
-  --white: hsla(0, 0%, 100%, 1);
+  --white: rgb(255, 255, 255);
 
   --banner-overlay: 90deg, hsl(220, 17%, 7%) 0%, hsla(220, 17%, 7%, 0.5) 100%;
   --bottom-overlay: 180deg, hsla(250, 13%, 11%, 0), hsla(250, 13%, 11%, 1);
@@ -66,6 +66,12 @@ a {
   text-decoration: none;
 }
 p {
+  color: white;
+}
+span {
+  color: white;
+}
+.meta-item {
   color: white;
 }
 img {
@@ -256,17 +262,17 @@ body {
   background-color: var(--background);
   top: 96px;
   bottom: 0;
-  left: 0;
+  left: -340px;
   max-width: 340px;
   width: 100%;
   border-block-start: 1px solid var(--banner-background);
   overflow-y: overlay;
-  z-index: hidden;
+  z-index: 4;
   transition: var(--transition-long);
 }
 
 .sidebar.active {
-  transform: translateX(20px);
+  transform: translateX(340px);
   visibility: visible;
 }
 
@@ -332,7 +338,137 @@ body {
   z-index: 3;
 }
 
+.heading,
+.title-large,
+.title {
+  font-weight: var(--weight-bold);
+  letter-spacing: 0.5px;
+}
+
 .overlay.active {
   opacity: 0.5;
   pointer-events: all;
 }
+
+.title {
+  font-size: var(--fs-title);
+}
+
+.heading {
+  color: var(--white);
+  font-size: var(--fs-heading);
+
+  line-height: 1.2;
+}
+
+.title-large {
+  font-size: var(--fs-title-lg);
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.meta-item {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.btn {
+  color: var(--white);
+  font-size: var(--fs-button);
+  font-weight: var(--weight-bold);
+  max-width: max-content;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding-block: 12px;
+  padding-inline: 20px 24px;
+  border-radius: var(--radius-8);
+  transition: var(--transition-short);
+}
+
+.container {
+  position: relative;
+  background-color: var(--surface);
+  columns: var(--on-surface);
+  padding: 24px 20px 48px;
+  height: calc(100vh - 96px);
+  overflow-y: overlay;
+  z-index: 1;
+}
+
+.container::after {
+  content: '';
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-image: linear-gradient(var(--bottom-overlay));
+  z-index: 1;
+  pointer-events: none;
+}
+
+.banner {
+  position: relative;
+  height: 700px;
+  border-radius: var(--radius-24);
+  overflow: hidden;
+}
+
+.banner-slider .slider-item {
+  position: absolute;
+  top: 0;
+  left: 120%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--banner-background);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity var(--transition-long);
+}
+
+.banner-slider .slider-item::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(var(--banner-overlay));
+}
+
+.banner-slider .active {
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+.banner-content {
+  position: absolute;
+  left: 24px;
+  right: 24px;
+  bottom: 206px;
+  z-index: 1;
+  color: var(--text-color);
+}
+
+.banner :is(.heading, .banner-text) {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.banner .heading {
+  -webkit-line-clamp: 3;
+  margin-block-end: 16px;
+}
+
+.meta-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+}
+
+/* 1:16:18 */
