--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@
   --transition-long: 500ms ease;
 }
 
+* {
+  color: white;
+}
+
 *,
 *::before,
 *::after {
@@ -65,15 +69,15 @@ a {
   color: white;
   text-decoration: none;
 }
-p {
+/* p {
   color: white;
 }
 span {
   color: white;
-}
-.meta-item {
+} */
+/* .meta-item {
   color: white;
-}
+} */
 img {
   height: auto;
 }
@@ -122,10 +126,8 @@ body {
 
 /* reusable */
 
-.search-wrapper::before {
-  position: absolute;
-  top: 14px;
-  right: 12px;
+.search-wrapper::before,
+.load-more::before {
   content: '';
   width: 20px;
   height: 20px;
@@ -135,7 +137,27 @@ body {
   animation: loading 500ms linear infinite;
   display: none;
 }
+.search-wrapper::before {
+  position: absolute;
+  top: 14px;
+  right: 12px;
+}
+.search-wrapper.searching::before {
+  display: block;
+}
 
+.load-more {
+  background-color: var(--primary-variant);
+  margin-inline: auto;
+  margin-block: 36px 60px;
+}
+.load-more:is(:hover, :focus-visible) {
+  --primary-variant: hsla(350, 67%, 39%, 1);
+}
+
+.load-more.loading::before {
+  display: block;
+}
 @keyframes loading {
   0% {
     transform: rotate(0);
@@ -149,6 +171,100 @@ body {
   font-size: var(--fs-title);
   font-weight: var(--weight-bold);
   letter-spacing: 0.5px;
+}
+
+.card-badge {
+  background-color: var(--banner-background);
+  color: var(--white);
+  font-size: var(--fs-label);
+  font-weight: var(--weight-bold);
+  padding-inline: 6px;
+  border-radius: var(--radius-4);
+}
+
+.poster-box {
+  background-image: url('../images/poster-bg-icon.png');
+  aspect-ratio: 2/3;
+}
+
+.poster-box,
+.video-card {
+  background-repeat: no-repeat;
+  background-size: 50px;
+  background-position: center;
+  background-color: var(--banner-background);
+  border-radius: var(--radius-16);
+  overflow: hidden;
+}
+
+.title-wrapper {
+  margin-block-end: 24px;
+}
+
+.slider-list {
+  margin-inline: -20px;
+  overflow-x: overlay;
+  padding-block-end: 16px;
+  margin-block-end: -16px;
+}
+
+.slider-list::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.slider-list:is(:hover :focus-within)::-webkit-scrollbar-thumb {
+  background-color: var(--banner-background);
+}
+.slider-list::-webkit-scrollbar-button {
+  width: 20px;
+}
+
+.slider-list .slider-inner {
+  position: relative;
+  display: flex;
+  gap: 16px;
+}
+
+.slider-list .slider-inner::before,
+.slider-list.slider-inner::after {
+  content: '';
+  min-width: 4px;
+}
+
+.meta-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+}
+
+.separator {
+  width: 4px;
+  height: 4px;
+  background-color: var(--white-alpha-20);
+  border-radius: var(--radius-8);
+}
+
+.video-card {
+  background-image: url('../images/video-bg-icon.png');
+  aspect-ratio: 16 / 9;
+  flex-shrink: 0;
+  max-width: 500px;
+  width: calc(100% - 40px);
+}
+
+.container::after,
+.search-modal::after {
+  content: '';
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-image: linear-gradient(var(--bottom-overlay));
+  z-index: 1;
+  pointer-events: none;
 }
 
 /* header */
@@ -399,18 +515,6 @@ body {
   z-index: 1;
 }
 
-.container::after {
-  content: '';
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 150px;
-  background-image: linear-gradient(var(--bottom-overlay));
-  z-index: 1;
-  pointer-events: none;
-}
-
 .banner {
   position: relative;
   height: 700px;
@@ -463,12 +567,181 @@ body {
   margin-block-end: 16px;
 }
 
-.meta-list {
+.banner .genre {
+  margin-block: 12px;
+}
+
+.banner-text {
+  -webkit-line-clamp: 2;
+  margin-block-end: 24px;
+}
+
+.banner .btn {
+  background-color: var(--primary);
+}
+
+.banner .btn:is(:hover, :focus-visible) {
+  box-shadow: var(--shadow-2);
+}
+
+.slider-control {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 0;
+  border-radius: var(--radius-16) 0 0 var(--radius-16);
+  user-select: none;
+  padding: 4px 0 4px 4px;
+  overflow-x: auto;
+}
+
+.slider-control::-webkit-scrollbar {
+  display: none;
+}
+.control-inner {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
   gap: 12px;
 }
 
-/* 1:16:18 */
+.control-inner::after {
+  content: '';
+  min-width: 12px;
+}
+.slider-control .slider-item {
+  width: 100px;
+  border-radius: var(--radius-8);
+  flex-shrink: 0;
+  filter: brightness(0.4);
+}
+
+.slider-control .active {
+  filter: brightness(1);
+  box-shadow: var(--shadow-1);
+}
+
+.movie-list {
+  padding-block-start: 32px;
+}
+
+.movie-card {
+  position: relative;
+  min-width: 200px;
+}
+
+.movie-card .card-banner {
+  width: 200px;
+}
+.movie-card .title {
+  width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin-block: 8px 4px;
+}
+
+.movie-card .meta-list {
+  justify-content: space-between;
+}
+
+.movie-card .card-btn {
+  position: absolute;
+  inset: 0;
+}
+
+/* Details */
+
+.backdrop-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+
+.backdrop-image::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(
+    0deg,
+    hsla(250, 13%, 11%, 1),
+    hsla(250, 13%, 11%, 0.9)
+  );
+}
+
+.movie-detail .movie-poster {
+  max-width: 300px;
+  width: 100%;
+}
+
+.movie-detail .heading {
+  margin-block: 24px 12px;
+}
+
+.movie-detail :is(.meta-list, .genre) {
+  color: var(--text-color);
+}
+.movie-detail .genre {
+  margin-block: 24px 32px;
+}
+.detail-list {
+  margin-block: 24px 32px;
+}
+
+.movie-detail .list-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+  margin-block-end: 12px;
+}
+
+.movie-detail .list-name {
+  color: var(--text-color);
+  min-width: 112px;
+}
+
+/* movies list */
+
+.genre-list .title-wrapper {
+  margin-block-end: 56px;
+}
+
+.grid-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  column-gap: 16px;
+  row-gap: 20px;
+}
+
+:is(.genre-list, .search-modal) :is(.movie-card, .card-banner) {
+  width: 100%;
+}
+
+/* search */
+
+.search-modal {
+  position: fixed;
+  top: 96px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--surface);
+  padding: 50px 24px;
+  overflow-y: overlay;
+  z-index: 4;
+  display: none;
+}
+
+.search-modal.active {
+  display: block;
+}
+
+.search-modal .lablel {
+  color: var(--primary-variant);
+  font-weight: var(--weight-bold);
+  margin-block-end: 8px;
+}
