--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,9 @@
   --transition-long: 500ms ease;
 }
 
-* {
+/* * {
   color: white;
-}
+} */
 
 *,
 *::before,
@@ -106,7 +106,7 @@ html {
 
 body {
   background-color: var(--background);
-  color: var(--background);
+  color: var(--white);
   font-size: var(--fs-body);
   line-height: 1.5;
 }
