--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 /** @format */
 
 :root {
-  --background: hsla(220, 17%, 7%, 1);
-  --banner-background: hsla(250, 6%, 20%, 1);
+  --background: rgb(44, 0, 62);
+  --banner-background: rgb(97, 39, 123);
   --white-alpha-20: hsla(0, 0%, 100%, 0.2);
   --on-background: hsla(220, 100%, 95%, 1);
   --on-surface: hsla(250, 100%, 95%, 1);
@@ -10,12 +10,13 @@
   --primary: hsla(349, 100%, 43%, 1);
   --primary-variant: hsla(349, 69%, 51%, 1);
   --rating-color: hsla(44, 100%, 49%, 1);
-  --surface: hsla(250, 13%, 11%, 1);
+  --surface: rgb(68, 21, 86);
   --text-color: hsla(250, 2%, 59%, 1);
-  --white: rgb(255, 255, 255);
+  --white: rgb(249, 229, 255);
 
-  --banner-overlay: 90deg, hsl(220, 17%, 7%) 0%, hsla(220, 17%, 7%, 0.5) 100%;
-  --bottom-overlay: 180deg, hsla(250, 13%, 11%, 0), hsla(250, 13%, 11%, 1);
+  --banner-overlay: 90deg, hsl(280, 100%, 20%) 0%,
+    hsla(277, 100%, 26%, 0.5) 100%;
+  --bottom-overlay: 180deg, hsla(278, 36%, 27%, 0), rgb(50, 32, 61);
 
   --ff-dm-sans: 'DM Sans', sans-serif;
 
@@ -28,8 +29,8 @@
 
   --weight-bold: 700;
 
-  --shadow-1: 0 1px 4px hsla(0, 0%, 0%, 0.75);
-  --shadow-2: 0 2px 4px hsla(350, 100%, 43%, 0.3);
+  --shadow-1: 0 1px 4px hsla(284, 100%, 11%, 0.75);
+  --shadow-2: 0 2px 4px hsla(300, 100%, 43%, 0.3);
 
   --radius-4: 4px;
   --radius-8: 8px;
@@ -668,8 +669,8 @@ body {
   inset: 0;
   background-image: linear-gradient(
     0deg,
-    hsla(250, 13%, 11%, 1),
-    hsla(250, 13%, 11%, 0.9)
+    rgb(50, 0, 73),
+    hsla(278, 14%, 11%, 0.9)
   );
 }
 
